fix map popup on mobile

--- a/wp-content/themes/conall-child/src/scss/pages/esmo2023.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/esmo2023.scss
@@ -138,7 +138,7 @@ div#esmo_23_hero_row {
   background-position: top center;
   background-size: 100%;
   width: 100vw;
-  height: 90vh;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
@@ -1498,6 +1498,7 @@ div#temp-footer-row {
                             margin: 0;
                             display: block;
                             font-weight: 700;
+                            text-align: center;
                         }
                     }
                     div.container-date-top:after {
